--- a/src/style.css
+++ b/src/style.css
@@ -15,15 +15,27 @@ h1 {
   font-weight: 800;
   text-align: center;
 }
-
-form {
-  padding: 30px;
+.form-wrapper {
+  padding: 15px 20px;
   background-color: rgb(255, 254, 254);
   border-radius: 8px;
-  display: flex;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.05);
   margin-bottom: 30px;
 }
+
+form {
+  display: flex;
+}
+.hint {
+  line-height: 1.5;
+  font-size: 12px;
+  margin-top: 5px;
+  opacity: 0.6;
+}
+.hidden {
+  display: none;
+}
+
 .input-quote {
   padding: 16px;
   width: 80%;
